# azcam-90prime

./: README.md  pyproject.toml  requirements-githib.txt  requirements.txt  setup.cfg
azcam_90prime/: __init__.py  console_primefocus.py  detector_bok90prime.py  index_90prime.html  server_primefocus.py
support/: start_monitor_primefocus.bat
support/templates/: fits_template_90Prime_master.txt
