[metadata]
name = azcam-90prime
version = attr: azcam_90prime.__version__
author = Michael Lesser
author_email=mlesser@arizona.edu
license_files = LICENSE
description=azcam extension for Bok telescope 90prime facility camera
long_description=file: README.md, LICENSE.md
long_description_content_type=text/markdown
keywords=ccd imaging astronomy observation observatory
url=https://github.com/mplesser/azcam-90prime/
include_package_data=True

[options]
packages = find:
python_requires = >=3.9
zip_safe = False

[bdist_wheel]
universal = 0
